plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.4.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "io.freefair.lombok" version "5.3.3.3"
    id "org.sonarqube" version "3.1.1"

    //	Check if new versions are available among dependencies
    id "com.github.ben-manes.versions" version "0.38.0"
}

group = 'com.upgrade.interview.challenge'
version = '1.0-SNAPSHOT'
description = 'Back-end Tech Challenge: Campsite reservation REST API service'
sourceCompatibility = '16'

sonarqube {
    properties {
        property "sonar.projectKey", "nicolasbrouard_campsite-reservation"
        property "sonar.organization", "nbrouard"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.7'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.guava:guava:30.1.1-jre'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}
test.finalizedBy jacocoTestReport

tasks["sonarqube"].dependsOn test